# cam_auto_adjusting_ros

cam_auto_adjusting/: package.xml  setup.cfg  setup.py
cam_auto_adjusting/backup/urdf/: camera.xacro  robot.urdf.xacro  robotic_arm.xacro  ros2_control_.xacro
cam_auto_adjusting/cam_auto_adjusting/: model_test.py
cam_auto_adjusting/config/: robot_controllers.yaml
cam_auto_adjusting/launch/: display.launch.py  gazebo.launch.py  test.launch.py
cam_auto_adjusting/meshes/: Camera.STL  Endeffector.STL  LP.STL  Object.STL  Rotary.STL  Slider_R.STL  Slider_Z.STL  base_link.STL  drill_bit_one.mtl
cam_auto_adjusting/models/: convert_to_onnx.py
cam_auto_adjusting/urdf/: camera.xacro  robot.urdf.xacro  robotic_arm.xacro
cam_auto_adjusting_config/: .setup_assistant  CMakeLists.txt  package.xml
cam_auto_adjusting_config/config/: cam_auto_adjusting.ros2_control.xacro  cam_auto_adjusting.srdf  cam_auto_adjusting.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
cam_auto_adjusting_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
commander/: CMakeLists.txt  package.xml
commander/src/: commander.cpp
